# cryptodropfile

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  nginx.conf  protobuf_msg.rs  shell.nix
src/: crypto.rs  error.rs  example.rs  file.rs  logger.rs  main.rs  protobuf_msg.rs  sandbox.rs  server.rs
tests/: test.rs
